[tool.poetry]
name = "leoss"
version = "0.1.13"
description = "Low Earth Orbit Spacecraft Simulator"
authors = ["space-hiro <144877753+space-hiro@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
