[tool.poetry]
name = "leoss"
version = "0.2.12"
description = "Low Earth Orbit Spacecraft Simulator"
authors = ["space-hiro <144877753+space-hiro@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
matplotlib = "^3.8.0"
datetime = "^5.2"
tqdm = "^4.66.1"
pandas = "^2.1.1"
cartopy = "^0.22.0"
pyigrf = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
